--- a/wf-base/src/main/webapp/WEB-INF/web.xml
+++ b/wf-base/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,11 @@
 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
+        
+        <filter>
+            <filter-name>multireadFilter</filter-name>
+            <filter-class>org.activiti.rest.controller.adapter.MultiReadServletFilter</filter-class>
+        </filter>
 
 	<filter>
 		<filter-name>UIFilter</filter-name>
@@ -37,6 +42,11 @@
         <filter-name>JSONPFilter</filter-name>
         <filter-class>org.activiti.explorer.servlet.JsonpCallbackFilter</filter-class>
     </filter>
+    
+    <filter-mapping>
+        <filter-name>multireadFilter</filter-name>
+        <url-pattern>/service/*</url-pattern>
+    </filter-mapping> 
 
 	<filter-mapping>
 		<filter-name>UIFilter</filter-name>
