--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 		<commons.codec.version>1.8</commons.codec.version>
 		<hamcrest.version>1.1</hamcrest.version>
 		<jsonassert.version>1.2.3</jsonassert.version>
-		<guava.version>15.0</guava.version>
+		<guava.version>18.0</guava.version>
 		<easymock.version>3.0</easymock.version>
 		<hibernate.version>4.3.10.Final-fixed</hibernate.version>
 		<usertype.core.version>3.2.0.GA</usertype.core.version>
@@ -60,6 +60,8 @@
 		<trove.version>1.0.2</trove.version>
 		<quartz.version>1.6.1</quartz.version>
 		<ehcache.version>2.10.0</ehcache.version>
+		<spring-test-dbunit.version>1.2.0</spring-test-dbunit.version>
+		<dbunit.version>2.5.1</dbunit.version>
 	</properties>
                 <!--igov.storage-static.version>1.0.0${parameter.sRevision}-SNAPSHOT</igov.storage-static.version>
                 <igov.storage-temp.version>1.0.0${parameter.sRevision}-SNAPSHOT</igov.storage-temp.version>
@@ -399,6 +401,20 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.dbunit</groupId>
+				<artifactId>dbunit</artifactId>
+				<version>${dbunit.version}</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.github.springtestdbunit</groupId>
+				<artifactId>spring-test-dbunit</artifactId>
+				<version>${spring-test-dbunit.version}</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
@@ -407,9 +423,23 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.assertj</groupId>
+				<artifactId>assertj-core</artifactId>
+				<version>2.1.0</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
 				<version>${mockito.version}</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-all</artifactId>
+				<version>1.3</version>
 				<scope>test</scope>
 			</dependency>
 
