--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -394,7 +394,16 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
-
+		<dependency>
+  			<groupId>org.apache.httpcomponents</groupId>
+  			<artifactId>httpclient</artifactId>
+  			<version>4.5</version>
+		</dependency>
+		<dependency>
+        	<groupId>org.apache.httpcomponents</groupId>
+        	<artifactId>httpmime</artifactId>
+       		<version>4.4.1</version>
+   		</dependency>
     </dependencies>
     <profiles>
         <profile>
