--- a/central-js/bower.json
+++ b/central-js/bower.json
@@ -12,6 +12,7 @@
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
     "angular-bootstrap": "~0.12.1",
+    "angular-moment": "~0.10.2",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui": "~0.4.0",
