--- a/central-js/bower.json
+++ b/central-js/bower.json
@@ -26,6 +26,16 @@
     "angular-ui-uploader": "~1.1.1",
     "angular-ui-event": "~1.0.0"
   },
+  "overrides": {
+    "moment": {
+      "main": [
+        "moment.js",
+        "locale/en.js",
+        "locale/uk.js",
+        "locale/ru.js"
+      ]
+    }
+  },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
