--- a/wf-central/src/main/resources/queryloader/config.properties
+++ b/wf-central/src/main/resources/queryloader/config.properties
@@ -1,2 +1,4 @@
 # Available profiles: H2, PostgreSQL
 db.profile = PostgreSQL
+# Full path to directory with SQL: Classpath + root folder + profile folder
+root.folder = /queryloader/
