--- a/wf-base/src/main/resources/db.properties
+++ b/wf-base/src/main/resources/db.properties
@@ -6,6 +6,11 @@ jdbc.password=
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.globally_quoted_identifiers=false
 
+# Available profiles: H2, PostgreSQL
+queryloader.db.profile = PostgreSQL
+# Full path to directory with SQL: /Classpath + root folder + profile specific folder
+queryloader.root.folder = /queryloader/
+
 #db=postgresql
 #jdbc.driver=org.postgresql.Driver
 #jdbc.url=jdbc:postgresql://localhost/postgres
