--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -404,6 +404,12 @@
         	<artifactId>httpmime</artifactId>
        		<version>4.4.1</version>
    		</dependency>
+        <!-- Allows to store external parameters for QueryLoader in *.properties files. -->
+        <dependency>
+            <groupId>ru.qatools.commons</groupId>
+            <artifactId>properties</artifactId>
+            <version>2.0.RC3</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
