--- a/wf-base/src/main/resources/log4j.properties
+++ b/wf-base/src/main/resources/log4j.properties
@@ -1,5 +1,7 @@
 log4j.rootLogger=INFO, CA
 
+log4j.org.wf.dp.dniprorada.dao.place = debug, CA
+
 # ConsoleAppender
 log4j.appender.CA=org.apache.log4j.ConsoleAppender
 log4j.appender.CA.layout=org.apache.log4j.PatternLayout
