--- a/central-js/client/.jshintrc
+++ b/central-js/client/.jshintrc
@@ -3,19 +3,19 @@
   "browser": true,
   "esnext": true,
   "bitwise": true,
-  "camelcase": true,
+  "camelcase": false,
   "curly": true,
   "eqeqeq": true,
   "immed": true,
   "indent": 2,
-  "latedef": true,
+  "latedef": false,
   "newcap": true,
   "noarg": true,
   "quotmark": "single",
   "regexp": true,
   "undef": true,
-  "unused": true,
-  "strict": true,
+  "unused": false,
+  "strict": false,
   "trailing": true,
   "smarttabs": true,
   "globals": {
